W07 Updated swagger / Updated course collection Validation / added 2 more testing
