# middlewares/validateCreateCourse.js
@@ -5,14 +5,13 @@ const validateCreateCourse = (req, res, next) => {
     title: 'required|string',
     description: 'required|string',
     instructor: 'required|string',
-    rooms: 'required|string',
     'students.*': 'string',
   };
 
   const messages = {
     required: 'The :attribute field is required.',
     'instructor.string': 'Instructor must be a valid ID string.',
-    'rooms.string': 'Room must be a valid ID string.',
+    'students.*.string': 'Each student ID must be a valid string.',
   };
 
   validator(req.body, rules, messages, (err, status) => {
